--- a/src/User/Register/styles.scss
+++ b/src/User/Register/styles.scss
@@ -17,6 +17,7 @@
   ion-item {
     --background: transparent;
     background: transparent;
+    padding: 0 !important;
 
     ion-icon {
       &:first-of-type:not(:last-child) {
